# a-star-visualizer

./: .gitignore  Astar.cpp  Astar.h  CMakeLists.txt  PuzzleMove.h  PuzzleState.cpp  PuzzleState.h  README.md  astar_bindings.cpp  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt
.devcontainer/: devcontainer.json
backend/: run_solver.py
frontend/: index.html  tailwind.config.js
frontend/src/: App.jsx  GridInput.jsx  PuzzleGrid.jsx
