[tool.poetry]
name = "tile-puzzle-solver"
version = "0.1.0"
description = ""
authors = ["aayush4515 <aayushacharya1545@gmail.com>"]

[tool.poetry.dependencies]
python = "3.12*"
fastapi = "0.110.0"
uvicorn = "0.29.0"
pydantic = "2.6.1"
pybind11 = "2.13.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
